--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "docs-watch": "watch -n 1 \"jsdoc -c .jsdoc.json .\"",
+    "docs": "jsdoc -c .jsdoc.json ."
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "sqlite-async": "^1.0.12"
   },
   "devDependencies": {
+    "jsdoc": "^3.6.4",
     "mocha": "^7.1.2"
   }
 }
