--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "author": "Gerben Aaltink",
   "license": "ISC",
   "dependencies": {
-    "sqlite-async": "^1.0.12",
+    "sqlite-async": "^1.0.12"
   },
   "devDependencies": {
     "jsdoc": "^3.6.4",
