--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alopex",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Databases for lazy people.",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
   "author": "Gerben Aaltink",
   "license": "ISC",
   "dependencies": {
+    "sqlite3": "4.1.1",
     "sqlite-async": "^1.0.12"
   },
   "devDependencies": {
