--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "author": "Gerben Aaltink",
   "license": "ISC",
   "dependencies": {
-    "sqlite3": "4.1.1",
-    "sqlite-async": "^1.0.12"
+    "sqlite-async": "^1.0.12",
+    "sqlite3": "4.1.1"
   },
   "devDependencies": {
     "jsdoc": "^3.6.4",
